<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
    android:id="@+id/main"
android:background="@android:color/white"
tools:context=".common.ui.addUlb.AddUlbActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Location Icon -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLocation"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/icn_location_pick"
            android:scaleType="fitCenter"
            app:tint="@color/colorPrimary" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_your_ulb"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_select_your_ulb_to_help"
            android:textColor="#7A7A7A"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"
            android:lineSpacingExtra="2dp"
            android:textSize="12sp" />


        <RelativeLayout
            android:id="@+id/rlDist"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="visible"
            android:layout_below="@+id/llFirstName"
            android:background="@drawable/city_spinner"
            >


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/select_district"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/colorGray"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_drop_down"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlUlb"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="visible"
            android:layout_below="@+id/llFirstName"
            android:background="@drawable/city_spinner"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUlb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/select_ulb"
                />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/colorGray"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_drop_down"/>

        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoAhead"
            style="@style/MyButtonStyle"
            android:layout_marginTop="20dp"
            android:text="@string/go_ahead"
            />

        <Button
            android:id="@+id/btn_change_lang"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/change_language"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/dim_12_sp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>