<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDeals"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivDeal"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="@dimen/_90sdp"
            android:contentDescription="@string/deals"
            android:scaleType="fitXY"
            android:src="@drawable/img_zomato"
            app:layout_constraintBottom_toTopOf="@id/tvDealsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDealsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="#F63333"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/deal"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDeal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/reward_points_rounded_shape"
            android:paddingStart="@dimen/_4sdp"
            android:paddingTop="@dimen/_1sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingBottom="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@id/tvDealsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDealsTitle">

            <ImageView
                android:id="@+id/ivCoins"
                android:layout_width="16dp"
                android:layout_height="12dp"
                android:contentDescription="@string/about_coins"
                android:src="@drawable/icn_coin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvRewardPoints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRewardPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivCoins"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="40" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvDescDeal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="start"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvDealsTitle"
            app:layout_constraintTop_toBottomOf="@id/tvDealsTitle"
            tools:text="Use 40 points on your order to get discount of Rs.100" />

        <TextView
            android:id="@+id/tvValidTill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintStart_toStartOf="@id/tvDescDeal"
            app:layout_constraintTop_toBottomOf="@id/tvDescDeal"
            tools:text="Valid till 24 June." />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/details"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintStart_toEndOf="@id/tvValidTill"
            app:layout_constraintTop_toTopOf="@id/tvValidTill" />

        <TextView
            android:id="@+id/btnRedeem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_redeem_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/redeem_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_7ssp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvValidTill" />

        <TextView
            android:text="@string/already_redeemed"
            android:id="@+id/tvAlreadyRedeemed"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_7ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColor="@color/colorYellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvValidTill"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>